Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7030

editor crash via mouse operation

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.5.0-beta
    • Qt Creator 2.5.0-beta, Qt Creator 2.6.0-rc
    • Editors
    • None
    • Qt Creator 2.5.81
      Qt 4.8.0 (64 bit)
      Ubuntu 11.04 amd64
    • 62fd2713d00ed3756cead7072cbbd61e631e6670

      In editor select via mouse few lines of code with commented line, rigth click - qt-creator crash...
      posible fix:
      ./src/plugins/cppeditor/cppinsertdecldef.cpp:536

      - if (decltr->core_declarator
      + if (decltr != NULL && decltr->core_declarator
      

        1. out-1.ogv
          1.97 MB
        2. QtCreatorCrash.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            uint32 Maxim
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes