Editor: Fix NULL-Pointer dereference in cppinsertdecldef

Task-number: QTCREATORBUG-7030

Change-Id: Id2467f24dff289b6d23407ea15b181f76c8fd2e7
Reviewed-by: Leandro Melo <leandro.melo@nokia.com>